gateway-to-serviceca/shared/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/rev: default
  name: gateway-to-serviceca
