gateway-to-serviceca/shared/http-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/originating-service-name: http.apps.example.com
    service.beta.openshift.io/serving-cert-secret-name: httpcert
  name: http
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: https
      port: 8443
      protocol: TCP
      targetPort: 8443
      appProtocol: https
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
      appProtocol: http
  selector:
    app: http
  sessionAffinity: None
  type: ClusterIP
