gateway-to-serviceca/shared/gateway.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway-v1
spec:
  selector:
    istio: gateway-v1
  servers:
    - hosts:
        - http-passthrough.apps.example.com
      port:
        name: https
        number: 8443
        protocol: HTTPS
      tls:
        mode: PASSTHROUGH
    - hosts:
        - http.apps.example.com
      port:
        name: https
        number: 8443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: gateway-secret
