gateway-to-serviceca/shared/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: http
spec:
  host: http.apps.example.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: gateway-v1
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: http-passthrough
spec:
  host: http-passthrough.apps.example.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: gateway-v1
    weight: 100
  wildcardPolicy: None
---
